--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
             are 
             <span style="text-decoration:underline">"Inverse Operations"</span>
             <br>
-            Each one undoes the other.
+            Each one undoes the other.<hr>
         </p>
+    </p>
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/upBa_BGkP5E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
     <footer id="footer">
         ©2019 ALL THINGS MATH   ALL RIGHTS RESERVED
