--- a/index.html
+++ b/index.html
@@ -62,6 +62,45 @@
         </p>
     </p>
     <p>
+        Example:<br>
+        Factor x<sup>2</sup> - 4<br>
+        x<sup>2</sup> - 4 = x<sup>2</sup> - (2)<sup>2</sup><br>
+        Using the formula, this expression becomes<br>(x + 2)(x - 2) *Answer
+    </p>
+    <hr>
+    <p>
+        Example:<br>
+        Factor x<sup>2</sup> - 25<br>
+        x<sup>2</sup> - 25 = x<sup>2</sup> - (5)<sup>2</sup><br>
+        Using the formula, this expression becomes<br>
+        (x + 5)(x - 5) *Answer
+    </p>
+    <hr>
+    <p>
+        Example:<br>
+        Factor x<sup>2</sup> - 81<br>
+        x<sup>2</sup> - 81 = x<sup>2</sup> - (9)<sup>2</sup><br>
+        Using the formula, this expression becomes<br>
+        (x + 9)(x - 9) *Answer
+    </p>
+    <hr>
+    <p>
+        Example:<br>
+        Factor x<sup>2</sup> - 49<br>
+        x<sup>2</sup> - 49 = x<sup>2</sup> - (7)<sup>2</sup><br>
+        Using the formula, this expression becomes<br>
+        (x + 7)(x - 7) *Answer
+    </p>
+    <hr>
+    <p>
+        Example:<br>
+        Factor x<sup>2</sup> - 121<br>
+        x<sup>2</sup> - 121 = x<sup>2</sup> - (11)<sup>2</sup><br>
+        Using the formula, this expression becomes<br>
+        (x + 11)(x - 11) *Answer
+    </p>
+    <hr>
+    <p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/upBa_BGkP5E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
     <footer id="footer">
